--- a/src/client/app/pages/cluster/cluster-node/cluster-node.html
+++ b/src/client/app/pages/cluster/cluster-node/cluster-node.html
@@ -106,6 +106,14 @@
                       {{ nodeInfo.StorageDirver }}
                     </td>
                   </tr>
+                  <tr>
+                      <td>
+                          API Addr
+                      </td>
+                      <td>
+                          {{ nodeInfo.APIAddr }}
+                      </td>
+                  </tr>
               </tbody>
           </table>
       </div>
