--- a/src/client/app/pages/group/server/container-detail/container-detail.html
+++ b/src/client/app/pages/group/server/container-detail/container-detail.html
@@ -191,6 +191,24 @@
         </div>
       </div>
     </li>
+    <li>
+      <i class="fa fa-wrench"></i>
+      <div class="timeline-item">
+        <div class="timeline-header">
+          <span>Labels</span>
+        </div>
+        <div class="timeline-body">
+          <ul class="list-unstyled" *ngIf="containerLabels.length > 0">
+            <li value="-" class="flex-display custom-list" *ngFor="let item of containerLabels">
+              <span class="break-word">{{ item }}</span>
+            </li>
+          </ul>
+          <span *ngIf="containerLabels.length == 0">
+            No label variable defined.
+          </span>
+        </div>
+      </div>
+    </li>
   </ul>
 </section>
 
