--- a/src/client/app/pages/group/server/container-list/container-list.html
+++ b/src/client/app/pages/group/server/container-list/container-list.html
@@ -251,38 +251,38 @@
                       </button>
                       <ul class="dropdown-menu" role="menu">
                       <li>
-                        <a href="javascript:void(0)" (click)="ServiceOperate(item, 'unpause')">
+                        <a href="javascript:void(0)" (click)="serviceOperate(item, 'unpause')">
                           <i class="fa fa-hourglass-start text-success"></i> Unpause
                         </a>
                       </li>
                       <li>
-                        <a href="javascript:void(0)" (click)="ServiceOperate(item, 'pause')">
+                        <a href="javascript:void(0)" (click)="serviceOperate(item, 'pause')">
                           <i class="fa fa-pause"></i> Pause
                         </a>
                         </li>
                         <li>
-                          <a href="javascript:void(0)" (click)="ServiceOperate(item, 'restart')">
+                          <a href="javascript:void(0)" (click)="serviceOperate(item, 'restart')">
                             <i class="fa fa-refresh text-success"></i> Restart
                           </a>
                         </li>
                         <li>
-                          <a href="javascript:void(0)" (click)="ServiceOperate(item, 'stop')">
+                          <a href="javascript:void(0)" (click)="serviceOperate(item, 'stop')">
                             <i class="fa fa-stop"></i> Stop
                           </a>
                         </li>
                         <li>
-                          <a href="javascript:void(0)" (click)="ServiceOperate(item, 'start')">
+                          <a href="javascript:void(0)" (click)="serviceOperate(item, 'start')">
                             <i class="fa fa-play text-success"></i> Start
                           </a>
                         </li>
                         <li>
-                          <a href="javascript:void(0)" (click)="showRmContainerModal(item, 'kill')">
+                          <a href="javascript:void(0)" (click)="serviceOperate(item, 'kill')">
                             <i class="fa fa-remove text-danger"></i> Kill
                           </a>
                         </li>
                         <li>
-                          <a href="javascript:void(0)" (click)="showRmContainerModal(item)">
-                            <i class="fa fa-trash text-danger"></i> Down
+                          <a href="javascript:void(0)" (click)="showRmServiceModal(item)">
+                            <i class="fa fa-trash text-danger"></i> Remove
                           </a>
                         </li>
                       </ul>
@@ -301,7 +301,7 @@
       </div>
       <div [ngClass]="{'active': activedTab == 'service'}" *ngIf="agentInvalid" style="padding: 15px;">
         <div class="alert alert-danger show">
-          Please upgrade humpback-agent version to 1.3.1 or higher.
+          Please update humpback-agent to the <a href="https://hub.docker.com/r/humpbacks/humpback-agent/">latest version</a>
         </div>
       </div>
     </div>
@@ -328,6 +328,17 @@
     <button type="button" class="btn btn-success btn-flat" (click)="rmContainer()">Confirm</button>
   </hb-modal-footer>
 </hb-modal>
+
+<hb-modal [options]="rmServiceModalOptions">
+    <div class="description" *ngIf="rmServiceTarget?.Name">
+      Are you sure you want to delete
+      <strong class="important-text">{{ rmServiceTarget?.Name }}</strong> ?
+    </div>
+    <hb-modal-footer>
+      <button type="button" class="btn btn-default btn-flat" (click)="rmServiceModalOptions.show = false">Cancel</button>
+      <button type="button" class="btn btn-success btn-flat" (click)="rmService()">Confirm</button>
+    </hb-modal-footer>
+  </hb-modal>
 
 <hb-modal [options]="pullImageModalOptions">
   <form novalidate #pullForm="ngForm" (ngSubmit)="pullImage(pullForm)">
