--- a/src/client/app/pages/group/server/server-detail/server-detail.html
+++ b/src/client/app/pages/group/server/server-detail/server-detail.html
@@ -1,11 +1,11 @@
 <section class="content-header">
-  <h1> Service Info <small>{{ serviceName }} {{ container.Name }}</small></h1>
-  <!-- <ol class="breadcrumb">
+  <h1> Service Info <small>{{ serviceName }}</small></h1>
+  <ol class="breadcrumb">
     <li>
-      <a [routerLink]="['/cluster', groupInfo.ID, 'overview']"><i class="fa fa-th"></i> Container List</a>
+      <a [routerLink]="['/group', groupId, ip, 'overview']"><i class="fa fa-th"></i> Service List</a>
     </li>
-    <li class="active">Detail</li>
-  </ol> -->
+    <li class="active">Service Detail</li>
+  </ol>
 </section>
 <section class="content">
   <div class="btn-panel flex-display">
@@ -35,10 +35,10 @@
           </li>
           <li class="divider"></li>
           <li>
-            <a href="javascript:void(0)" [class.disable]="container.State?.Running" (click)="showDeleteModal($event)">
-              <i class="fa fa-warning text-danger"></i> Down
-            </a>
-          </li>
+              <a href="javascript:void(0)" (click)="showDeleteModal($event)">
+                <i class="fa fa-warning text-danger"></i> Remove
+              </a>
+            </li>
         </ul>
     </div>
     <!-- <a [routerLink]="['/cluster', groupInfo.ID, 'containers', metaId, 'clone']" class="btn btn-default btn-flat">
@@ -201,18 +201,14 @@
   </div>
 </hb-modal>
 <hb-modal [options]="deleteContainerModalOptions">
-  <p>Are you sure you want to delete {{ container?.Name?.substr(1) }}?</p>
-  <div class="checkbox">
-    <label>
-      <input type="checkbox" (change)="enableForceDeletion($event)">
-      <span class="text-danger">
-          You want to force delete
-      </span>
-    </label>
-  </div>
-  <hb-modal-footer>
-    <button type="button" class="btn btn-default btn-flat" (click)="deleteContainerModalOptions.show = fasle">Cancel</button>
-    <button type="button" class="btn btn-success btn-flat" (click)="deleteContainer()">Confirm</button>
-  </hb-modal-footer>
-</hb-modal>
+    <p>Are you sure you want to delete
+      <strong class="important-text">
+        {{ serviceName }}
+      </strong>?
+    </p>
+    <hb-modal-footer>
+      <button type="button" class="btn btn-default btn-flat" (click)="deleteContainerModalOptions.show = fasle">Cancel</button>
+      <button type="button" class="btn btn-success btn-flat" (click)="deleteService()">Confirm</button>
+    </hb-modal-footer>
+  </hb-modal>
 <!-- Modal Define End -->
