--- a/src/client/app/pages/group/server/container-new/container-new.html
+++ b/src/client/app/pages/group/server/container-new/container-new.html
@@ -140,7 +140,7 @@
             </div>
           </div>
           <div class="form-group">
-            <select class="form-control">
+            <select class="form-control" formControlName="Type">
               <option value="tcp">TCP</option>
               <option value="udp">UDP</option>
             </select>
